--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,9 +5,9 @@ spring:
 # Database
   datasource:
     driver-class-name: org.postgresql.Driver
-    url: jdbc:postgresql://sql.pl:9999/
-    username: user
-    password: pass
+    url: jdbc:postgresql://sql.itnet.nazwa.pl:5432/itnet_przemo
+    username: itnet_przemo
+    password: Egt1234@
 # JPA properties
   jpa:
     hibernate:
@@ -26,7 +26,7 @@ logging:
     org.hibernate: DEBUG
 # Server configuration
 server:
-  port: 8080
+  port: 8443
   sessionTimeout: 30
 # Security configuration
 security:
